<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.workoutapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.workoutapp.ui.calendar.CalendarFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.workoutapp.ui.maps.MapFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.workoutapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" >
        <action
            android:id="@+id/action_navigation_profile_to_favorites_fragment"
            app:destination="@id/favorites_fragment" />
    </fragment>

    <fragment
        android:id="@+id/favorites_fragment"
        android:name="com.example.workoutapp.ui.profile.FavoritesFragment"
        android:label="favoritos"
        tools:layout="@layout/activity_favorites" />


</navigation>