<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/log_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_username"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbutton"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/colorPrimaryLight"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/signingoogle"
        app:layout_constraintTop_toBottomOf="@+id/log_password"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintWidth_percent=".8" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/signingoogle"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/log_password"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="490dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpwd"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/log_password" />

</androidx.constraintlayout.widget.ConstraintLayout>