<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edittext_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintVertical_bias=".2"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edittext_bg"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edittext_bg"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/passwordcheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/pwdconfirm"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerbutton"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toEndOf="@id/signupgoogle"
            app:layout_constraintTop_toBottomOf="@+id/passwordcheck"
            app:layout_constraintVertical_bias=".4"
            app:layout_constraintWidth_percent=".8" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/signupgoogle"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:background="@drawable/google_button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerbutton"
        app:layout_constraintTop_toBottomOf="@+id/passwordcheck"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="490dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

